# scanner_for_extensions

./: .gitignore  CMakeLists.txt  README.md
include/: http_server.hpp  media_index.hpp  scanner.hpp
src/: http_server.cpp  main.cpp  media_index.cpp  scanner.cpp
